--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Rating state start -->
   <!-- the card -->
-  <div class="rating-card card-visible">
+  <div class="rating-card">
 
     <!-- the main items container -->
     <main>
@@ -52,7 +52,7 @@
 
   <!-- Thank you state start -->
    <!-- the card -->
-   <div class="result-card">
+   <div class="result-card card-visible">
      <div class="content">
     <!-- the star logo -->
     <div class="thankyou-logo">
